fix(NyxTabs): ensure overflowing panels can scroll

--- a/src/components/NyxTabs/NyxTabs.scss
+++ b/src/components/NyxTabs/NyxTabs.scss
@@ -7,6 +7,7 @@
 
   display: flex;
   flex-direction: column;
+  min-height: 0;
   border: 1px solid var(--nyx-rgb-tabs-bg);
   overflow: hidden;
 
@@ -33,6 +34,9 @@
   }
 
   &__tab {
+    display: flex;
+    flex: 1 0 100%;
+    flex-direction: column;
     min-width: 100%;
     min-height: 0;
     padding: 1rem;
